# sphinx_toml

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
.github/workflows/: ipython-docs.yml  tests.yml
sphinx_toml/: __init__.py  models.py
tests/: conftest.py  ipython.toml  test_config.py  test_import.py  test_loader.py  test_models.py  test_normalisers.py
